@@ -51,6 +51,27 @@ value flac_Val_some( value v )
     CAMLreturn( some );
 }
 
+/* Threads management. */
+static pthread_key_t ocaml_c_thread_key;
+static pthread_once_t ocaml_c_thread_key_once = PTHREAD_ONCE_INIT;
+
+static void ocaml_flac_on_thread_exit(void *key) {
+  caml_c_thread_unregister();
+}
+
+static void ocaml_flac_make_key() {
+  pthread_key_create(&ocaml_c_thread_key, ocaml_flac_on_thread_exit);
+}
+
+void ocaml_flac_register_thread() {
+  static int initialized = 1;
+
+  pthread_once(&ocaml_c_thread_key_once, ocaml_flac_make_key);
+
+  if (caml_c_thread_register() && !pthread_getspecific(ocaml_c_thread_key))
+    pthread_setspecific(ocaml_c_thread_key,(void*)&initialized);
+}
+
 /* Convenience functions */
 #ifdef BIGENDIAN
 static inline int16_t bswap_16 (int16_t x) { return ((((x) >> 8) & 0xff) | (((x) & 0xff) << 8)); }
@@ -256,6 +277,7 @@ static FLAC__StreamDecoderSeekStatus dec_seek_callback(const FLAC__StreamDecoder
 {
  ocaml_flac_decoder_callbacks *callbacks = (ocaml_flac_decoder_callbacks *)client_data ;
 
+ ocaml_flac_register_thread();
  caml_acquire_runtime_system();
 
  if (callbacks->seek != Val_none)
@@ -279,6 +301,7 @@ static FLAC__StreamDecoderTellStatus dec_tell_callback(const FLAC__StreamDecoder
 {
  ocaml_flac_decoder_callbacks *callbacks = (ocaml_flac_decoder_callbacks *)client_data ;
 
+ ocaml_flac_register_thread();
  caml_acquire_runtime_system();
 
  if (callbacks->tell != Val_none)
@@ -302,6 +325,7 @@ static FLAC__StreamDecoderLengthStatus dec_length_callback(const FLAC__StreamDec
 {
  ocaml_flac_decoder_callbacks *callbacks = (ocaml_flac_decoder_callbacks *)client_data ;
 
+ ocaml_flac_register_thread();
  caml_acquire_runtime_system();
 
  if (callbacks->length != Val_none)
@@ -316,13 +340,14 @@ static FLAC__StreamDecoderLengthStatus dec_length_callback(const FLAC__StreamDec
 
  caml_release_runtime_system();
 
-  return FLAC__STREAM_DECODER_LENGTH_STATUS_UNSUPPORTED;
+ return FLAC__STREAM_DECODER_LENGTH_STATUS_UNSUPPORTED;
 }
 
 static FLAC__bool dec_eof_callback(const FLAC__StreamDecoder *decoder, void *client_data)
 {
  ocaml_flac_decoder_callbacks *callbacks = (ocaml_flac_decoder_callbacks *)client_data ;
 
+ ocaml_flac_register_thread();
  caml_acquire_runtime_system();
 
  if (callbacks->eof != Val_none)
@@ -342,12 +367,12 @@ static FLAC__bool dec_eof_callback(const FLAC__StreamDecoder *decoder, void *cli
  return false;
 }
 
-/* libFLAC is monothread so this is run within the main C thread. */
 static FLAC__StreamDecoderReadStatus dec_read_callback(const FLAC__StreamDecoder *decoder, FLAC__byte buffer[], 
                                                        size_t *bytes, void *client_data)
 {
   ocaml_flac_decoder_callbacks *callbacks = (ocaml_flac_decoder_callbacks *)client_data ;
 
+  ocaml_flac_register_thread();
   caml_acquire_runtime_system(); 
 
   value ret = caml_callback(callbacks->read,Val_int(*bytes));
@@ -393,6 +418,7 @@ FLAC__StreamDecoderWriteStatus dec_write_callback(const FLAC__StreamDecoder *dec
   int channels = frame->header.channels;
   int bps = frame->header.bits_per_sample;
 
+  ocaml_flac_register_thread();
   caml_acquire_runtime_system();
 
   value data = caml_alloc_tuple(channels);
@@ -674,6 +700,7 @@ FLAC__StreamEncoderWriteStatus enc_write_callback(const FLAC__StreamEncoder *enc
 {
   ocaml_flac_encoder_callbacks *callbacks = (ocaml_flac_encoder_callbacks *)client_data ;
 
+  ocaml_flac_register_thread();
   caml_acquire_runtime_system();
 
   value buf = caml_alloc_string(bytes);
@@ -694,6 +721,7 @@ FLAC__StreamEncoderSeekStatus enc_seek_callback(const FLAC__StreamEncoder *encod
  {
  ocaml_flac_encoder_callbacks *callbacks = (ocaml_flac_encoder_callbacks *)client_data ;
 
+ ocaml_flac_register_thread();
  caml_acquire_runtime_system();
 
  if (callbacks->seek != Val_none)
@@ -717,6 +745,7 @@ static FLAC__StreamEncoderTellStatus enc_tell_callback(const FLAC__StreamEncoder
 {
  ocaml_flac_encoder_callbacks *callbacks = (ocaml_flac_encoder_callbacks *)client_data ;
 
+ ocaml_flac_register_thread();
  caml_acquire_runtime_system();
 
  if (callbacks->tell != Val_none)
